fontconfig: re-org with <alias>
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/fontconfig/.config/fontconfig/conf.d/48-replace-charset.conf
+++ b/fontconfig/.config/fontconfig/conf.d/48-replace-charset.conf
@@ -69,4 +69,4 @@
   -->
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
-<!-- kate: space-indent on; indent-width 2; syntax xml; -->
+<!-- kate: space-indent on; indent-width 2; syntax xml; syntax xml; -->
