--- a/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
@@ -6,58 +6,118 @@
   <description>取代一些我不想使用的西文字体。</description>
   
   <!-- For consistence -->
-  <match target="pattern">
-    <test name="family">
-      <string>Noto Sans</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>sans-serif</string>
-    </edit>
-  </match>
+  <alias binding="same">
+    <family>Noto Sans</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
 
   <!-- Replace Web Safe Fonts and PDF Safe Fonts -->
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Liberation Sans</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>sans-serif</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Nimbus Sans</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>sans-serif</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Arial</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>sans-serif</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Helvetica</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>sans-serif</string>
-    </edit>
-  </match>
+  <alias binding="same">
+    <family>Liberation Sans</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Liberation Sans L</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Nimbus Sans</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Nimbus Sans L</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Nimbus Sans Narrow</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Arial</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Helvetica</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Liberation Serif</family>
+    <prefer>
+      <family>serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Nimbus Roman No9 L</family>
+    <prefer>
+      <family>serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Times</family>
+    <prefer>
+      <family>serif</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Liberation Mono</family>
+    <prefer>
+      <family>monospace</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Liberation Mono L</family>
+    <prefer>
+      <family>monospace</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Nimbus Mono</family>
+    <prefer>
+      <family>monospace</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Nimbus Mono L</family>
+    <prefer>
+      <family>monospace</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Courier</family>
+    <prefer>
+      <family>monospace</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Courier New</family>
+    <prefer>
+      <family>monospace</family>
+    </prefer>
+  </alias>
 
   <!-- GNOME Dev like it, but I don't. -->
-  <match target="pattern">
-    <test name="family">
-      <string>Cantarell</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>sans-serif</string>
-    </edit>
-  </match>
+  <alias binding="same">
+    <family>Cantarell</family>
+    <prefer>
+      <family>sans-serif</family>
+    </prefer>
+  </alias>
 </fontconfig>
 <!-- vim: set fdm=marker nu sts=2 sw=2 et: -->
-<!-- kate: space-indent on; indent-width 2; -->
+<!-- kate: space-indent on; indent-width 2; syntax xml; -->
