--- a/fontconfig/.config/fontconfig/conf.d/49-replace-monospace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-monospace.conf
@@ -5,54 +5,18 @@
 <fontconfig>
   <description>取代一些我不想使用的等宽字体。</description>
 
-  <match target="pattern">
-    <test name="family">
-      <string>Consolas</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>monospace</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Liberation Mono</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>monospace</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Nimbus Mono</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>monospace</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family">
-      <string>Inconsolata</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>monospace</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>Courier</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>monospace</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test name="family" compare="contains">
-      <string>courier</string>
-    </test>
-    <edit name="family" binding="same">
-      <string>monospace</string>
-    </edit>
-  </match>
+  <alias binding="same">
+    <family>Consolas</family>
+    <prefer>
+      <family>monospace</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Inconsolata</family>
+    <prefer>
+      <family>monospace</family>
+    </prefer>
+  </alias>
   <match target="pattern">
     <test name="family" compare="contains">
       <string>Source Code Pro</string>
@@ -63,4 +27,4 @@
   </match>
 </fontconfig>
 <!-- vim: set fdm=marker nu sts=2 sw=2 et: -->
-<!-- kate: space-indent on; indent-width 2; -->
+<!-- kate: space-indent on; indent-width 2; syntax xml; -->
