--- a/fontconfig/.config/fontconfig/conf.d/49-replace-zh-cn-others.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-zh-cn-others.conf
@@ -5,126 +5,97 @@
 <fontconfig>
   <description>取代一些我不想使用的楷体与仿宋字体。</description>
   <!-- 楷体 {{{ -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>SimKai</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正萤雪简体</string>
-      <string>方正萤雪繁体</string>
-      <string>方正新楷体_GBK</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>楷体</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正萤雪简体</string>
-      <string>方正萤雪繁体</string>
-      <string>方正新楷体_GBK</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>KaiTi</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正萤雪简体</string>
-      <string>方正萤雪繁体</string>
-      <string>方正新楷体_GBK</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>楷体_GB2312</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正萤雪简体</string>
-      <string>方正萤雪繁体</string>
-      <string>方正新楷体_GBK</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>KaiTi_GB2312</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正萤雪简体</string>
-      <string>方正萤雪繁体</string>
-      <string>方正新楷体_GBK</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>标楷体</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正萤雪繁体</string>
-      <string>方正萤雪简体</string>
-      <string>方正新楷体_GBK</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>DFKai-SB</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正萤雪繁体</string>
-      <string>方正萤雪简体</string>
-      <string>方正新楷体_GBK</string>
-    </edit>
-  </match>
+  <alias binding="strong">
+    <family>SimKai</family>
+    <accept>
+      <family>KaiTi_GB2312</family>
+    </accept>
+  </alias>
+  <alias binding="strong">
+    <family>KaiTi</family>
+    <accept>
+      <family>KaiTi_GB2312</family>
+    </accept>
+  </alias>
+  <alias binding="strong">
+    <family>KaiTi SC</family>
+    <accept>
+      <family>KaiTi_GB2312</family>
+    </accept>
+  </alias>
+  <alias binding="strong">
+    <family>楷体</family>
+    <accept>
+      <family>楷体_GB2312</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>楷体_GB2312</family>
+    <accept>
+      <family>Andika</family>
+      <family>方正萤雪简体</family>
+      <family>方正萤雪繁体</family>
+      <family>方正新楷体_GBK</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>KaiTi_GB2312</family>
+    <accept>
+      <family>Andika</family>
+      <family>方正萤雪简体</family>
+      <family>方正萤雪繁体</family>
+      <family>方正新楷体_GBK</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>标楷体</family>
+    <accept>
+      <family>Andika</family>
+      <family>方正萤雪繁体</family>
+      <family>方正萤雪简体</family>
+      <family>方正新楷体_GBK</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>DFKai-SB</family>
+    <accept>
+      <family>Andika</family>
+      <family>方正萤雪繁体</family>
+      <family>方正萤雪简体</family>
+      <family>方正新楷体_GBK</family>
+    </accept>
+  </alias>
   <!-- }}} -->
   <!-- 仿宋 {{{ -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>仿宋</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正刻本仿宋简体</string>
-      <string>方正仿宋_GBK</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>仿宋_GB2312</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正刻本仿宋简体</string>
-      <string>方正仿宋_GBK</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>FangSong</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正刻本仿宋简体</string>
-      <string>方正仿宋_GBK</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>FangSong_GB2312</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正刻本仿宋简体</string>
-      <string>方正仿宋_GBK</string>
-    </edit>
-  </match>
+  <alias binding="strong">
+    <family>FangSong</family>
+    <accept>
+      <family>FangSong_GB2312</family>
+    </accept>
+  </alias>
+  <alias binding="strong">
+    <family>仿宋</family>
+    <accept>
+      <family>仿宋_GB2312</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>仿宋_GB2312</family>
+    <accept>
+      <family>Andika</family>
+      <family>方正刻本仿宋简体</family>
+      <family>方正仿宋_GBK</family>
+     </accept>
+  </alias>
+  <alias binding="same">
+    <family>FangSong_GB2312</family>
+    <accept>
+      <family>Andika</family>
+      <family>方正刻本仿宋简体</family>
+      <family>方正仿宋_GBK</family>
+     </accept>
+  </alias>
   <!-- }}} -->
 </fontconfig>
 <!-- vim: set fdm=marker nu sts=2 sw=2 et: -->
-<!-- kate: space-indent on; indent-width 2; -->
+<!-- kate: space-indent on; indent-width 2; syntax xml; -->
