--- a/fontconfig/.config/fontconfig/conf.d/49-replace-zh-tw-others.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-zh-tw-others.conf
@@ -5,29 +5,25 @@
 <fontconfig>
   <description>取代一些我不想使用的楷体字体。</description>
   <!-- 楷体 {{{ -->
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>标楷体</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正萤雪繁体</string>
-      <string>方正萤雪简体</string>
-      <string>方正新楷体_GBK</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>DFKai-SB</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Andika</string>
-      <string>方正萤雪繁体</string>
-      <string>方正萤雪简体</string>
-      <string>方正新楷体_GBK</string>
-    </edit>
-  </match>
+  <alias binding="same">
+    <family>标楷体</family>
+    <accept>
+      <family>Andika</family>
+      <family>方正萤雪繁体</family>
+      <family>方正萤雪简体</family>
+      <family>方正萤雪简体</family>
+    </accept>
+  </alias>
+  <alias binding="same">
+    <family>DFKai-SB</family>
+    <accept>
+      <family>Andika</family>
+      <family>方正萤雪繁体</family>
+      <family>方正萤雪简体</family>
+      <family>方正萤雪简体</family>
+    </accept>
+  </alias>
   <!-- }}} -->
 </fontconfig>
 <!-- vim: set fdm=marker nu sts=2 sw=2 et: -->
-<!-- kate: space-indent on; indent-width 2; -->
+<!-- kate: space-indent on; indent-width 2; syntax xml; -->
