--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -104,4 +104,4 @@
   </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
-<!-- kate: space-indent on; indent-width 2; -->
+<!-- kate: space-indent on; indent-width 2; syntax xml; -->
