--- a/fontconfig/.config/fontconfig/conf.d/53-mpv-font.conf
+++ b/fontconfig/.config/fontconfig/conf.d/53-mpv-font.conf
@@ -22,4 +22,4 @@
   </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
-<!-- kate: space-indent on; indent-width 2; -->
+<!-- kate: space-indent on; indent-width 2; syntax xml; -->
