--- a/fontconfig/.config/fontconfig/conf.d/54-source-han-lang-attr-fix.conf
+++ b/fontconfig/.config/fontconfig/conf.d/54-source-han-lang-attr-fix.conf
@@ -141,3 +141,5 @@
     </edit>
   </match>
 </fontconfig>
+<!-- vim: set nu sts=2 sw=2 et: -->
+<!-- kate: space-indent on; indent-width 2; syntax xml; -->
