ssh,git: add config for KDE

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -54,6 +54,11 @@ Host codereview.qt-project.org
     #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
     UserKnownHostsFile ~/.ssh/known_hosts.d/public
 
+Host invent.kde.org
+    User git
+    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
+    UserKnownHostsFile ~/.ssh/known_hosts.d/public
+
 Host archlinuxcn
     User coelacanthus
     Hostname build.archlinuxcn.org
