--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -80,6 +80,9 @@
 [includeIf "gitdir:~/project/archlinuxcn/**"]
     path = ~/.config/git/archlinuxcn.config
 
+[includeIf "gitdir:~/project/kde/**"]
+    path = ~/.config/git/kde.config
+
 # Platform specific configs
 [includeIf "gitdir:/data/data/com.termux/files/home/**"]
     path = ~/.config/git/platform/termux.config
