--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -1,6 +1,8 @@
 ###+++--- GPGConf ---+++###
-default-key  15F4180E73787863
+default-key  892EBC7DC392DFF9C9C03F1D15F4180E73787863
 
+# Aliases for --recipient
+group myself   = 892EBC7DC392DFF9C9C03F1D15F4180E73787863
 
 #--------------------------------------
 # Certification Level
@@ -20,7 +22,7 @@ ask-cert-level
 # as trustworthy as one of your own secret keys. This option is useful if you
 # don't want to keep your secret keys (or one of them) online but still want to
 # be able to check the validity of a given recipient's or signator's key.
-trusted-key 15F4180E73787863
+trusted-key 892EBC7DC392DFF9C9C03F1D15F4180E73787863
 
 
 #--------------------------------------
@@ -98,8 +100,13 @@ keyserver hkps://keys.gnupg.net
 #keyserver hkps://pgp.surfnet.nl
 #keyserver hkps://pgp.gnd.pw
 
-#auto-key-retrieve
+# Import keys when verifying signatures which have an embedded keyblock.
+auto-key-import
 
+# Try to download missing keys when verifying signatures. (Note: This now
+# only works with new signatures containing the full signer fingerprint, not
+# old ones which only contain the 64-bit key ID.)
+#auto-key-retrieve
 
 #--------------------------------------
 # OpenPGP protocol specific options
@@ -111,27 +118,25 @@ keyserver hkps://keys.gnupg.net
 # https://en.wikipedia.org/wiki/Twofish
 # https://en.wikipedia.org/wiki/Camellia_(cipher)
 # https://en.wikipedia.org/wiki/Advanced_Encryption_Standard
-# The most highly ranked digest algorithm in this list is also used when signing
-# without encryption (e.g. --clear-sign or --sign).
-personal-digest-preferences SHA512 SHA384 SHA256 SHA224
+
+# Digest to use when we're certifying keys (--sign-key).
 # Althrough manual says "Be aware that if you choose an algorithm that GnuPG supports but other OpenPGP implementations do not,
 # then some users will not be able to use the key signatures you make, or quite possibly your entire key."
 # But I see SHA512 in RFC4880, so other OpenPGP implementations should support it.
 # On the other hand, there is only one OpenPGP implementation called GNUPG in practice.
 cert-digest-algo SHA512
-# The most highly ranked cipher in this list is also used for the --symmetric
-# encryption command.
-personal-cipher-preferences CAMELLIA256 AES256 TWOFISH CAMELLIA192 AES192 CAMELLIA128 AES BLOWFISH CAST5 3DES
+# Ciphers allowed to be used when encrypting data (--encrypt, --symmetric).
+# (With "--encrypt", recipient key preferences are only used to determine the
+# common set, but cannot override the order nor re-enable ciphers we don't
+# want. With "--symmetric" our 1st cipher is always used.)
+personal-cipher-preferences AES256 CAMELLIA256 AES192 CAMELLIA192 AES CAMELLIA128 TWOFISH
+# Digests allowed to be used when signing data (--sign, --clearsign).
+# (When signing+encrypting, recipient key preferences are only used to
+# determine the ocmmon set, but cannot override the order nor re-enable digests
+# we don't want. When only signing without a recipient, the 1st digest is
+# always used.)
+personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 personal-compress-preferences ZLIB BZIP2 ZIP Uncompressed
-# s2k-cipher-algo is unset because we have set personal-cipher-preferences
-#s2k-cipher-algo AES256
-s2k-digest-algo SHA512
-
-# List of default ciphers when creating new keys
-default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
-
-# Uncomment if you use GnuPG >= 2.3.0
-#force-aead
 
 #--------------------------------------
 # Security Options
