--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -9,10 +9,10 @@
     # List contributors with number of commits
     contributors = shortlog --summary --numbered --email --group=author
     
-    slog = log --all --decorate --oneline --graph --format='%C(bold yellow)%h%Creset - %s %C(green)(%cr)%Creset by %C(bold blue)%an%Creset %C(cyan)<%C(italic)%ae%C(no-italic)>%Creset %C(red)%d%Creset'
-    slog-sigs = log --all --decorate --oneline --graph --format='%C(bold yellow)%h%Creset - %s %C(green)(%cr)%Creset by %C(bold blue)%an%Creset %C(cyan)<%C(italic)%ae%C(no-italic)>%Creset %C(red)%d%Creset' --show-signature
-    linked-log = !git-linked log --all --decorate --oneline --graph --format='%C(bold yellow)%h%Creset - %s %C(green)(%cr)%Creset by %C(bold blue)%an%Creset %C(cyan)<%C(italic)%ae%C(no-italic)>%Creset %C(red)%d%Creset'
-    linked-log-sigs = !git-linked log --all --decorate --oneline --graph --format='%C(bold yellow)%h%Creset - %s %C(green)(%cr)%Creset by %C(bold blue)%an%Creset %C(cyan)<%C(italic)%ae%C(no-italic)>%Creset %C(red)%d%Creset' --show-signature
+    slog = log --all --decorate --graph --pretty=log
+    slog-sigs = log --all --decorate --graph --pretty=log-signature
+    linked-log = !git-linked log --all --decorate --graph --pretty=log
+    linked-log-sigs = !git-linked log --all --decorate --graph --pretty=log-signature
     
     # Remove branches that have already been merged with main.
     # a.k.a. 'delete merged'
