gpg: remove 0x prefix from print format

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -166,7 +166,7 @@ require-secmem
 #--------------------------------------
 
 # https://wiki.archlinux.org/title/GnuPG#Always_show_long_ID's_and_fingerprints
-keyid-format 0xlong
+keyid-format long
 
 # Print fingerprint on master key and subkeys
 with-fingerprint
