fontconfig: use Jigmo

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -16,6 +16,9 @@
       <string>Plangothic P2</string>
       <string>NazonoMincho</string>
       <string>NazonoMincho+</string>
+      <string>Jigmo</string>
+      <string>Jigmo2</string>
+      <string>Jigmo3</string>
       <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
       <string>Blobmoji</string>
@@ -35,6 +38,9 @@
       <!-- 补全生僻字 -->
       <string>NazonoMincho</string>
       <string>NazonoMincho+</string>
+      <string>Jigmo</string>
+      <string>Jigmo2</string>
+      <string>Jigmo3</string>
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
       <string>Twemoji</string>
@@ -59,6 +65,9 @@
       <string>Plangothic P2</string>
       <string>NazonoMincho</string>
       <string>NazonoMincho+</string>
+      <string>Jigmo</string>
+      <string>Jigmo2</string>
+      <string>Jigmo3</string>
       <string>Twemoji</string>
       <string>Twemoji Mozilla</string>
       <string>Blobmoji</string>
