--- a/fontconfig/etc/conf.avail/66-qt.conf
+++ b/fontconfig/etc/conf.avail/66-qt.conf
@@ -25,8 +25,12 @@
       <family>NazonoMincho</family>
       <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>NazonoMincho+</family>
-      <!-- 中日韩统一表意文字扩展 fallback-->
-      <family>HanaMinB</family>
+      <!-- 中日韩统一表意文字扩展 A -->
+      <family>Jigmo</family>
+      <!-- 中日韩统一表意文字扩展 BCDEFI -->
+      <family>Jigmo2</family>
+      <!-- 中日韩统一表意文字扩展 GH -->
+      <family>Jigmo3</family>
       <!-- 拉让文：ꥃ -->
       <family>Noto Sans Rejang</family>
       <!-- 越南傣文：ꪀꪑ -->
@@ -65,8 +69,12 @@
       <family>NazonoMincho</family>
       <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>NazonoMincho+</family>
-      <!-- 中日韩统一表意文字扩展 C：𫚥 -->
-      <family>HanaMinB</family>
+      <!-- 中日韩统一表意文字扩展 A -->
+      <family>Jigmo</family>
+      <!-- 中日韩统一表意文字扩展 BCDEFI -->
+      <family>Jigmo2</family>
+      <!-- 中日韩统一表意文字扩展 GH -->
+      <family>Jigmo3</family>
       <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>Plangothic P1</family>
       <!-- 中日韩统一表意文字扩展 GH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
@@ -113,8 +121,12 @@
       <family>NazonoMincho</family>
       <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>NazonoMincho+</family>
-      <!-- 中日韩统一表意文字扩展 fallback-->
-      <family>HanaMinB</family>
+      <!-- 中日韩统一表意文字扩展 A -->
+      <family>Jigmo</family>
+      <!-- 中日韩统一表意文字扩展 BCDEFI -->
+      <family>Jigmo2</family>
+      <!-- 中日韩统一表意文字扩展 GH -->
+      <family>Jigmo3</family>
       <!-- 拉让文：ꥃ -->
       <family>Noto Sans Rejang</family>
       <!-- 越南傣文：ꪀꪑ -->
