tmux: merge tmux-sensible to my config, improve true color detection

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,8 @@
 #!/hint/bash
 
+# reload config
+bind r source-file ~/.config/tmux/tmux.conf \; display 'tmux.conf sourced'
+
 # set terminal title
 set -g set-titles on
 setw -g automatic-rename
@@ -19,23 +22,40 @@ bind -n WheelUpPane if-shell -Ft= "#{mouse_any_flag}" "send-keys -M" "if-shell -
 # key, else, just send the mouse event  
 bind -n WheelDownPane if-shell -Ft= "#{alternate_on}" "send-keys -t= down" "select-pane -t= \; send-keys -M"
 
-# reload config
-bind r source-file ~/.config/tmux/tmux.conf \; display 'tmux.conf sourced'
-
 # set 256 colors or truecolor
 if-shell "(( $(tput colors) >= 256 ))" {
     set -g default-terminal tmux-256color
 }
+
 # enable true color
-if-shell "[[ $COLORTERM =~ (24bit|truecolor) ]]" {
+if-shell "[[ -n "$COLORTERM" ]]" {
     set -sa terminal-overrides '*:RGB:Tc'
 }
 
 # boost history
 set -g history-limit 50000
 
-## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
-set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM COLORTERM'
+# address vim mode switching delay
+set -g escape-time 1
+
+# tmux messages are displayed for 4 seconds
+set -g display-time 4000
+
+# refresh 'status-left' and 'status-right' more often
+set -g status-interval 5
+
+# emacs key bindings in tmux command prompt (prefix + :) are better than
+# vi keys, even for vim users
+set -g status-keys emacs
+
+# focus events enabled for terminals that support them
+set -g focus-events on
+
+# super useful when using "grouped sessions" and multi-monitor setup
+setw -g aggressive-resize on
+
+# update the TERM variable of terminal emulator when creating a new session or attaching a existing session
+set -g update-environment 'WAYLAND_DISPLAY DISPLAY XAUTHORITY TERM COLORTERM'
 
 # More friendly split pane
 bind-key h split-window -h
@@ -54,7 +74,6 @@ run -b ~/.config/tmux/theme.tmux
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
