fontconfig: use Noto CJK VF instead of Source Han
Qt 6.7 has support Variable Font.

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -10,7 +10,7 @@
     <edit binding="strong" mode="prepend" name="family">
       <string>Andika</string>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
-      <string>Source Han Sans SC</string>
+      <string>Noto Sans CJK SC</string>
       <!-- 补全生僻字 -->
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
@@ -34,7 +34,7 @@
     <edit binding="strong" mode="prepend" name="family">
       <string>Noto Serif</string>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
-      <string>Source Han Serif SC</string>
+      <string>Noto Serif CJK SC</string>
       <!-- 补全生僻字 -->
       <string>NazonoMincho</string>
       <string>NazonoMincho+</string>
@@ -59,7 +59,7 @@
       <string>Maple Mono</string>
       <string>Fira Code</string>
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
-      <string>Source Han Sans SC</string>
+      <string>Noto Sans CJK SC</string>
       <!-- 补全生僻字 -->
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
