fontconfig: add NazonoMincho back because Jigmo has only Regular weight

--- a/fontconfig/etc/conf.avail/66-qt.conf
+++ b/fontconfig/etc/conf.avail/66-qt.conf
@@ -21,6 +21,10 @@
       <family>Plangothic P1</family>
       <!-- 中日韩统一表意文字扩展 GH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
       <family>Plangothic P2</family>
+      <!-- 中日韩统一表意文字扩展 AGH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
+      <family>NazonoMincho</family>
+      <!-- 中日韩统一表意文字扩展 BCDEFI：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
+      <family>NazonoMincho+</family>
       <!-- 中日韩统一表意文字扩展 A -->
       <family>Jigmo</family>
       <!-- 中日韩统一表意文字扩展 BCDEFI -->
@@ -61,13 +65,17 @@
       <family>Noto Sans Egyptian Hieroglyphs</family>
       <!-- 苏美尔楔形文字：𒆠𒂗𒂠 -->
       <family>Noto Sans Cuneiform</family>
+      <!-- 中日韩统一表意文字扩展 AGH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
+      <family>NazonoMincho</family>
+      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
+      <family>NazonoMincho+</family>
       <!-- 中日韩统一表意文字扩展 A -->
       <family>Jigmo</family>
       <!-- 中日韩统一表意文字扩展 BCDEFI -->
       <family>Jigmo2</family>
       <!-- 中日韩统一表意文字扩展 GH -->
       <family>Jigmo3</family>
-      <!-- 中日韩统一表意文字扩展 BCDEF：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
+      <!-- 中日韩统一表意文字扩展 BCDEFI：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
       <family>Plangothic P1</family>
       <!-- 中日韩统一表意文字扩展 GH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
       <family>Plangothic P2</family>
@@ -109,6 +117,10 @@
       <family>Plangothic P1</family>
       <!-- 中日韩统一表意文字扩展 GH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀-->
       <family>Plangothic P2</family>
+      <!-- 中日韩统一表意文字扩展 AGH：𰻝𱁬𰜩𰀴𰅐𰆀𰈀𰊐𰊠𰍠𰔀 -->
+      <family>NazonoMincho</family>
+      <!-- 中日韩统一表意文字扩展 BCDEFI：𫚥𮀔𮧵𬺰𬺱𬺲𬺳𬺴𬺵𬺶𬺷𬺸𬺹 -->
+      <family>NazonoMincho+</family>
       <!-- 中日韩统一表意文字扩展 A -->
       <family>Jigmo</family>
       <!-- 中日韩统一表意文字扩展 BCDEFI -->
