--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -14,6 +14,8 @@
       <!-- 补全生僻字 -->
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
+      <family>NazonoMincho</family>
+      <family>NazonoMincho+</family>
       <string>Jigmo</string>
       <string>Jigmo2</string>
       <string>Jigmo3</string>
@@ -34,6 +36,8 @@
       <!-- Use SC variant to use it with unknown lang like en-* zh-Hans-* and zh-cmn -->
       <string>Noto Serif CJK SC</string>
       <!-- 补全生僻字 -->
+      <family>NazonoMincho</family>
+      <family>NazonoMincho+</family>
       <string>Jigmo</string>
       <string>Jigmo2</string>
       <string>Jigmo3</string>
@@ -59,6 +63,8 @@
       <!-- 补全生僻字 -->
       <string>Plangothic P1</string>
       <string>Plangothic P2</string>
+      <family>NazonoMincho</family>
+      <family>NazonoMincho+</family>
       <string>Jigmo</string>
       <string>Jigmo2</string>
       <string>Jigmo3</string>
