fontconfig: use shorter form

--- a/fontconfig/.config/fontconfig/conf.d/55-use-shanggu-for-tc.conf
+++ b/fontconfig/.config/fontconfig/conf.d/55-use-shanggu-for-tc.conf
@@ -6,71 +6,55 @@
     Shanggu Fonts doesn't support locl feature,
     so I can't use it as default fonts.
   -->
-
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Source Han Sans TC</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Source Han Serif TC</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Source Han Sans HC</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Source Han Serif HC</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Noto Sans CJK TC</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Noto Serif CJK TC</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Noto Sans CJK HK</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Sans TC VF</string>
-    </edit>
-  </match>
-  <match target="pattern">
-    <test qual="any" name="family">
-      <string>Noto Serif CJK HK</string>
-    </test>
-    <edit name="family" mode="assign" binding="same">
-      <string>Shanggu Serif TC VF</string>
-    </edit>
-  </match>
+  
+  <alias binding="same">
+    <family>Source Han Sans TC</family>
+    <prefer>
+      <family>Shanggu Sans TC VF</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Source Han Serif TC</family>
+    <prefer>
+      <family>Shanggu Serif TC VF</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Source Han Sans HC</family>
+    <prefer>
+      <family>Shanggu Sans TC VF</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Source Han Serif HC</family>
+    <prefer>
+      <family>Shanggu Serif TC VF</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Noto Sans CJK TC</family>
+    <prefer>
+      <family>Shanggu Sans TC VF</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Noto Serif CJK TC</family>
+    <prefer>
+      <family>Shanggu Serif TC VF</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Noto Sans CJK HK</family>
+    <prefer>
+      <family>Shanggu Sans TC VF</family>
+    </prefer>
+  </alias>
+  <alias binding="same">
+    <family>Noto Serif CJK HK</family>
+    <prefer>
+      <family>Shanggu Serif TC VF</family>
+    </prefer>
+  </alias>
 
   <match target="pattern">
     <test qual="any" name="lang">
