--- a/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
@@ -77,37 +77,37 @@
   <alias binding="same">
     <family>Liberation Mono</family>
     <prefer>
-      <family>monospace</family>
+      <family>Iosevka Term</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Liberation Mono L</family>
     <prefer>
-      <family>monospace</family>
+      <family>Iosevka Term</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Nimbus Mono</family>
     <prefer>
-      <family>monospace</family>
+      <family>Iosevka Term</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Nimbus Mono L</family>
     <prefer>
-      <family>monospace</family>
+      <family>Iosevka Term</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Courier</family>
     <prefer>
-      <family>monospace</family>
+      <family>Iosevka Term</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Courier New</family>
     <prefer>
-      <family>monospace</family>
+      <family>Iosevka Term</family>
     </prefer>
   </alias>
 
