--- a/fontconfig/.config/fontconfig/conf.d/49-replace-monospace.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-monospace.conf
@@ -8,13 +8,13 @@
   <alias binding="same">
     <family>Consolas</family>
     <prefer>
-      <family>monospace</family>
+      <family>Iosevka Term</family>
     </prefer>
   </alias>
   <alias binding="same">
     <family>Inconsolata</family>
     <prefer>
-      <family>monospace</family>
+      <family>Iosevka Term</family>
     </prefer>
   </alias>
   <match target="pattern">
@@ -22,7 +22,7 @@
       <string>Source Code Pro</string>
     </test>
     <edit name="family" binding="same">
-      <string>monospace</string>
+      <string>Iosevka Term</string>
     </edit>
   </match>
 </fontconfig>
