fontconfig: add cursive generic family

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -88,6 +88,27 @@
       <string>Noto Color Emoji</string>
     </edit>
   </match>
+  <match target="pattern">
+    <test qual="any" name="family">
+      <string>cursive</string>
+    </test>
+    <edit binding="strong" mode="prepend" name="family">
+      <string>LXGW WenKai</string>
+      <!-- 补全生僻字 -->
+      <string>Plangothic P1</string>
+      <string>Plangothic P2</string>
+      <family>NazonoMincho</family>
+      <family>NazonoMincho+</family>
+      <string>Jigmo</string>
+      <string>Jigmo2</string>
+      <string>Jigmo3</string>
+      <string>Twemoji</string>
+      <string>Twemoji Mozilla</string>
+      <string>Blobmoji</string>
+      <string>Noto Color Emoji</string>
+      <string>Noto Emoji</string>
+    </edit>
+  </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
 <!-- kate: space-indent on; indent-width 2; syntax xml; -->
