fontconfig: reformat config

--- a/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
+++ b/fontconfig/.config/fontconfig/conf.d/49-replace-latin.conf
@@ -1,10 +1,13 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
-<!-- Configs based on https://github.com/rocka/dotFiles/blob/master/.config/fontconfig/conf.d/10-replace.conf -->
-<!-- Configs based on https://github.com/rydesun/dotfiles/blob/master/.config/fontconfig/conf.d/52-replace.conf -->
+<!--
+  Configs based on
+  https://github.com/rocka/dotFiles/blob/master/.config/fontconfig/conf.d/10-replace.conf
+  https://github.com/rydesun/dotfiles/blob/master/.config/fontconfig/conf.d/52-replace.conf
+-->
 <fontconfig>
   <description>取代一些我不想使用的西文字体。</description>
-  
+
   <!-- For consistence -->
   <alias binding="same">
     <family>Noto Sans</family>
