git(alias): log alias should only control style and not scope
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -9,10 +9,10 @@
     # List contributors with number of commits
     contributors = shortlog --summary --numbered --email --group=author
     
-    slog = log --all --decorate --graph --pretty=log
-    slog-sigs = log --all --decorate --graph --pretty=log-signature
-    linked-log = !git-linked log --all --decorate --graph --pretty=log
-    linked-log-sigs = !git-linked log --all --decorate --graph --pretty=log-signature
+    slog = log --decorate --graph --pretty=log
+    slog-sigs = log --decorate --graph --pretty=log-signature
+    linked-log = !git-linked log --decorate --graph --pretty=log
+    linked-log-sigs = !git-linked log --decorate --graph --pretty=log-signature
     
     # Remove branches that have already been merged with main.
     # a.k.a. 'delete merged'
