ssh: enable SSHFP again
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -74,7 +74,7 @@ Match all
     # Enable compression to optimize in bad network environment
     Compression yes
     # Trust SSHFP DNS record
-    #VerifyHostKeyDNS yes
+    VerifyHostKeyDNS yes
     # I will only trust server that I verify manually or via SSHFP+DNSSEC
     StrictHostKeyChecking yes
     # https://infosec.mozilla.org/guidelines/openssh.html#modern
