gpg: make sequoia-chameleon-gnupg happy
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -221,7 +221,9 @@ no-greeting
 #       For each valid user-id which also has a valid mail address print only
 #       the fingerprint and the mail address.
 #
-list-options show-policy-url show-user-notations show-sig-expire
+list-options show-policy-url
+list-options show-user-notations
+#list-options show-sig-expire
 list-options show-uid-validity
 
 # This is a space or comma delimited string that gives options used when
@@ -256,7 +258,8 @@ list-options show-uid-validity
 #   pka-trust-increase
 #       Raise the trust in a signature to full if the signature passes PKA
 #       validation. This option is only meaningful if pka-lookups is set.
-verify-options show-policy-urls show-uid-validity
+#verify-options show-policy-urls
+verify-options show-uid-validity
 
 # Use this program to display photo user IDs
 #
