git: add missing sendmail config
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -65,6 +65,8 @@
     helper = /usr/lib/git-core/git-credential-libsecret
 
 [include]
+    path = ~/.config/git/sendmail.config
+[include]
     path = ~/.config/git/format.config
 [include]
     path = ~/.config/git/diff-specified.config
