--- a/git/.config/git/linux.config
+++ b/git/.config/git/linux.config
@@ -2,5 +2,9 @@
     email = CoelacanthusHex@gmail.com
     name = Celeste Liu
 
+[b4]
+    send-endpoint-web = https://lkml.kernel.org/_b4_submit
+
+
 # vim: set ft=gitconfig et:
 # kate: space-indent on; indent-width 4; syntax toml;
