git: improve sendmail config with sendemail.identity
Signed-off-by: Coelacanthus <CoelacanthusHex@gmail.com>

--- a/git/.config/git/sendmail.config
+++ b/git/.config/git/sendmail.config
@@ -1,4 +1,6 @@
 [sendemail]
+    identity = gmail
+[sendemail.gmail]
     smtpServer = /usr/bin/sendmail
     smtpServerOption = -a
     smtpServerOption = gmail
